# mmm-system

./: .dockerignore  .env.example  .gitignore  DESIGN-SYSTEM.md  Dockerfile.backend  Dockerfile.frontend  PLAN.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Card.tsx  Forecasting.tsx  GoogleSheetsSync.tsx  Insights.tsx  MediaOptimizer.tsx  MetricsManager.tsx  ROI360.tsx
frontend/app/lib/: mock-data.ts
src/api/: main.py
src/api/routes/: channels.py  models.py  optimizer.py  sync.py
src/api/schemas/: models.py
src/calibration/: geo_lift.py  priors.py
src/insights/: alerts.py  recommendations.py  weekly_report.py
src/models/: base.py  channel_registry.py  comparison.py  pymc_model.py
src/optimizer/: allocator.py  scenarios.py
src/pipeline/: orchestrator.py
src/pipeline/connectors/: sheets_connector.py
src/pipeline/storage/: duckdb_analytics.py  postgres.py
src/pipeline/transformers/: aggregator.py  preprocessor.py
src/pipeline/validators/: data_validator.py
